// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Templates should render without failing 1`] = `
<span
  className="c-sbi-omschrijving"
>
  foo
</span>
`;

exports[`Templates should render without failing 2`] = `
<div
  className="c-bezoekadres__non-mailing"
/>
`;

exports[`Templates should render without failing 3`] = `<div />`;

exports[`Templates should render without failing 4`] = `
<span
  className="c-handelsnaam c-handelsnaam__failliet"
  title="{{vm.variables[1].value}}"
>
  foo
</span>
`;

exports[`Templates should render without failing 5`] = `<div />`;
